--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<title>GameGuidez</title>
 </head>
-<body class="grey lighten-3"">
+<body class="grey lighten-3">
 
 	<!-- NAVBAR -->
 	<nav class="z-depth-0 grey lighten-4">
@@ -22,7 +22,7 @@
 					<li class="logged-in" style="display:none">
 						<a href="#" class="grey-text" id="logout">Logout</a>
 					</li>
-					<li class="logged-in" style="display:none">
+					<li class="admin" style="display:none">
 						<a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Guide</a>
 					</li>
 					<li class="logged-out" style="display:none">
@@ -37,7 +37,7 @@
 
 	<!-- Admin Actions -->
 
-	<form class="center-align admin-actions" style="margin:40px auto; max-width:300px">
+	<form class="center-align admin-actions admin" style="margin:40px auto; max-width:300px; display: none">
 		<input type="email" placeholder="User email" id="admin-email" required />
 		<button class="btn-small yello darken-2 z-depth-0">Make Admin</button>
 	</form>
@@ -60,6 +60,7 @@
 					<label for="signup-bio">One Line Bio</label>
 				</div>
 				<button class="btn yellow darken-2 z-depth-0">Sign up</button>
+				<p class="error pink-text center-align"></p>
 			</form>
 		</div>
 	</div>
@@ -78,6 +79,7 @@
 					<label for="login-password">Your password</label>
 				</div>
 				<button class="btn yellow darken-2 z-depth-0">Login</button>
+				<p class="error pink-text center-align"></p>
 			</form>
 		</div>
 	</div>
@@ -104,6 +106,7 @@
 					<label for="content">Guide Content</label>
 				</div>
 				<button class="btn yellow darken-2 z-depth-0">Create</button>
+				<p class="error pink-text center-align"></p>
 			</form>
 		</div>
 	</div>
