--- a/public/index.html
+++ b/public/index.html
@@ -1,65 +1,149 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<!-- Compiled and minified CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<title>GameGuidez</title>
+</head>
+<body class="grey lighten-3">
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.9.4/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.9.4/firebase-auth.js"></script>
-    <script defer src="/__/firebase/5.9.4/firebase-database.js"></script>
-    <script defer src="/__/firebase/5.9.4/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.9.4/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+	<!-- NAVBAR -->
+	<nav class="z-depth-0 grey lighten-4">
+		<div class="nav-wrapper container">
+			<a href="#" class="brand-logo">
+				<img src="img/logo.svg" style="width: 180px; margin-top: 10px;">
+			</a>
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+					<li class="logged-in" style="display:none">
+						<a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
+					</li>
+					<li class="logged-in" style="display:none">
+						<a href="#" class="grey-text" id="logout">Logout</a>
+					</li>
+					<li class="admin" style="display:none">
+						<a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Guide</a>
+					</li>
+					<li class="logged-out" style="display:none">
+						<a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
+					</li>
+					<li class="logged-out" style="display:none">
+						<a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
+					</li>
+			</ul>
+		</div>
+	</nav>
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+	<!-- Admin Actions -->
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+	<form class="center-align admin-actions admin" style="margin:40px auto; max-width:300px; display: none">
+		<input type="email" placeholder="User email" id="admin-email" required />
+		<button class="btn-small yello darken-2 z-depth-0">Make Admin</button>
+	</form>
 
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
+	<!-- SIGN UP MODAL -->
+	<div id="modal-signup" class="modal">
+		<div class="modal-content">
+			<h4>Sign up</h4><br />
+			<form id="signup-form">
+				<div class="input-field">
+					<input type="email" id="signup-email" required />
+					<label for="signup-email">Email address </label>
+				</div>
+				<div class="input-field">
+					<input type="password" id="signup-password" required />
+					<label for="signup-password">Choose password</label>
+				</div>
+				<div class="input-field">
+					<input type="text" id="signup-bio" />
+					<label for="signup-bio">One Line Bio</label>
+				</div>
+				<button class="btn yellow darken-2 z-depth-0">Sign up</button>
+				<p class="error pink-text center-align"></p>
+			</form>
+		</div>
+	</div>
+
+	<!-- LOGIN MODAL -->
+	<div id="modal-login" class="modal">
+		<div class="modal-content">
+			<h4>Login</h4><br />
+			<form id="login-form">
+				<div class="input-field">
+					<input type="email" id="login-email" required />
+					<label for="login-email">Email address</label>
+				</div>
+				<div class="input-field">
+					<input type="password" id="login-password" required />
+					<label for="login-password">Your password</label>
+				</div>
+				<button class="btn yellow darken-2 z-depth-0">Login</button>
+				<p class="error pink-text center-align"></p>
+			</form>
+		</div>
+	</div>
+
+	<!-- ACCOUNT MODAL -->
+	<div id="modal-account" class="modal">
+		<div class="modal-content center-align">
+			<h4>Account details</h4><br />
+			<div class="account-details"></div>
+		</div>
+	</div>
+
+	<!-- CREATE GUIDE MODAL -->
+	<div id="modal-create" class="modal">
+		<div class="modal-content">
+			<h4>Create Guide</h4><br />
+			<form id="create-form">
+				<div class="input-field">
+					<input type="text" id="title" required>
+					<label for="title">Guide Title</label>
+				</div>
+				<div class="input-field">
+					<textarea id="content" class="materialize-textarea" required></textarea>
+					<label for="content">Guide Content</label>
+				</div>
+				<button class="btn yellow darken-2 z-depth-0">Create</button>
+				<p class="error pink-text center-align"></p>
+			</form>
+		</div>
+	</div>
+
+	<!-- GUIDE LIST -->
+	<div class="container" style="margin-top: 40px;">
+		<ul class="collapsible z-depth-0 guides" style="border: none;">
+		</ul>
+	</div>
+	
+	<!-- Compiled and minified JavaScript -->
+	
+
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-functions.js"></script>
+	<script>
+		// Initialize Firebase
+		var config = {
+			apiKey: "AIzaSyB4u0Mvq6rvOWODqZ_vThgRPaRWnXr_9KU",
+			authDomain: "admin-project-ca154.firebaseapp.com",
+			databaseURL: "https://admin-project-ca154.firebaseio.com",
+			projectId: "admin-project-ca154"
+		};
+        firebase.initializeApp(config);
+        
+
+        // make auth and firestore refference
+        const auth = firebase.auth();
+		const db = firebase.firestore();
+		const functions = firebase.functions();
     </script>
-  </body>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script src="scripts/auth.js"></script>
+	<script src="scripts/index.js"></script>
+
+</body>
 </html>
